working ttrainQ function

--- a/Armijo-A4.ipynb
+++ b/Armijo-A4.ipynb
@@ -9,11 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import neuralnetworks as nnQ"
+    "import neuralnetworks as nnQ\n",
+    "import random\n",
+    "import numpy as np"
    ]
   },
   {
@@ -91,59 +93,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 462,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def train(self, X, T, nIterations=100, verbose=False,\n",
-    "              weightPrecision=0, errorPrecision=0, saveWeightsHistory=False):\n",
+    "def stateMoveTuple(state, move):\n",
+    "    tempTupState = []\n",
+    "    for x in state:\n",
+    "        tempTupState.append(tuple(x))\n",
     "        \n",
-    "        if self.Xmeans is None:\n",
-    "            self.Xmeans = X.mean(axis=0)\n",
-    "            self.Xstds = X.std(axis=0)\n",
-    "            self.Xconstant = self.Xstds == 0\n",
-    "            self.XstdsFixed = copy(self.Xstds)\n",
-    "            self.XstdsFixed[self.Xconstant] = 1\n",
-    "        X = self._standardizeX(X)\n",
-    "\n",
-    "        if T.ndim == 1:\n",
-    "            T = T.reshape((-1, 1))\n",
-    "\n",
-    "        if self.Tmeans is None:\n",
-    "            self.Tmeans = T.mean(axis=0)\n",
-    "            self.Tstds = T.std(axis=0)\n",
-    "            self.Tconstant = self.Tstds == 0\n",
-    "            self.TstdsFixed = copy(self.Tstds)\n",
-    "            self.TstdsFixed[self.Tconstant] = 1\n",
-    "        T = self._standardizeT(T)\n",
-    "\n",
-    "        startTime = time.time()\n",
-    "\n",
-    "        scgresult = ml.scg(self._pack(self.Vs, self.W),\n",
-    "                            self._objectiveF, self._gradientF,\n",
-    "                            X, T,\n",
-    "                            xPrecision=weightPrecision,\n",
-    "                            fPrecision=errorPrecision,\n",
-    "                            nIterations=nIterations,\n",
-    "                            verbose=verbose,\n",
-    "                            ftracep=True,\n",
-    "                            xtracep=saveWeightsHistory)\n",
-    "\n",
-    "        self._unpack(scgresult['x'])\n",
-    "        self.reason = scgresult['reason']\n",
-    "        self.errorTrace = np.sqrt(scgresult['ftrace']) # * self.Tstds # to _unstandardize the MSEs\n",
-    "        self.numberOfIterations = len(self.errorTrace)\n",
-    "        self.trained = True\n",
-    "        self.weightsHistory = scgresult['xtrace'] if saveWeightsHistory else None\n",
-    "        self.trainingTime = time.time() - startTime\n",
-    "        return self\n"
+    "    return (tuple(tempTupState),tuple(move))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 557,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trainQ(nRepetitions, learningRate, epsilonDecayFactor, validMovesF, makeMoveF):\n",
+    "    Q = {}\n",
+    "    state = [[1,2,3],[],[]]\n",
+    "    #initialize Q to empty dictionary\n",
+    "    #set state = start state\n",
+    "    epsilon = 1\n",
+    "    n = 0\n",
+    "    for x in range(nRepetitions):\n",
+    "        epsilon = epsilonDecayFactor * epsilon\n",
+    "        step_count = []\n",
+    "        step = 0\n",
+    "\n",
+    "        goal_state = [[],[],[1,2,3]]\n",
+    "        done = False\n",
+    "        \n",
+    "        while not done and (step <nRepetitions):\n",
+    "            next_move = epsilonFindMoves(Q, state, epsilonDecayFactor, validMovesF)\n",
+    "            next_state = makeMove(state,next_move) \n",
+    "            #to make the next move\n",
+    "            #print(next_state,'=',goal_state)\n",
+    "            if next_state == goal_state:\n",
+    "                #print('here')\n",
+    "                Q[stateMoveTuple(next_state,next_move)] = 1\n",
+    "                #tempQ = {stateMoveTuple(state,next_move),1}\n",
+    "                #Q.update(tempQ)\n",
+    "                \n",
+    "                done = True\n",
+    "                  #Update Q at (state,move) to equal 1\n",
+    "            else:\n",
+    "                  #Initialize Q at (state, move) to equal 0\n",
+    "                Q[stateMoveTuple(next_state,next_move)] = 0\n",
+    "                Q[stateMoveTuple(next_state,next_move)] = Q.get(stateMoveTuple(next_state,next_move),0) + learningRate *(\n",
+    "                                                        1+Q.get(stateMoveTuple(next_state,next_move),0)-\n",
+    "                                                        Q.get(stateMoveTuple(next_state,next_move),0))\n",
+    "                #Q[state, move] = Q[state, move] + learningRate * (1+Q[next_state, next_move] - Q[state, move])\n",
+    "                #increment step count\n",
+    "                step = step+1\n",
+    "            step_count.insert(0, step)\n",
+    "    return Q ,step_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 558,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q, stepsToGoal = trainQ(50, 0.5, 0.7, validMoves, makeMove)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 559,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 8, 7, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 559,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stepsToGoal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 531,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,25 +268,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 456,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeMove(state, move):\n",
+    "    temp = state[move[0]-1][0]\n",
+    "    state[move[0]-1].pop(0)\n",
+    "    state[move[1]-1].insert(0,temp)\n",
+    "    state2 = state\n",
+    "    return state2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 475,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def epsilonGreedy(nnetQ, state, validActions, epsilon):\n",
+    "    if np.random.uniform() < epsilon:\n",
+    "        # Random Move\n",
+    "        action = np.random.choice(validActions)\n",
+    "    else:\n",
+    "        # Greedy Move\n",
+    "        actionsRandomlyOrdered = random.sample(validActions, len(validActions))\n",
+    "        Qs = [nnetQ.use(np.array([[state,a]])) for a in actionsRandomlyOrdered]\n",
+    "        ai = np.argmax(Qs)\n",
+    "        action = actionsRandomlyOrdered[ai]\n",
+    "    Q = nnetQ.use(np.array([[state,action]]))\n",
+    "    return action, Q\n",
+    "\n",
+    "def epsilonFindMoves(Q, state, epsilonRate, validMoveF):\n",
+    "    validMoveList = validMoveF(state)\n",
+    "    if np.random.uniform()<epsilonRate:\n",
+    "        return random.choice(validMoveList)\n",
+    "    else:\n",
+    "        Qs = np.array([Q.get(stateMoveTuple(state, m), 0) for m in validMoveList])\n",
+    "        return validMoveList[np.argmin(Qs)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 458,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
       "2\n",
-      "3\n",
-      "[[1, 2], [1, 3], [2, 3]]\n"
+      "[[], [2, 3], [1]]\n",
+      "[[], [2, 3], [1]]\n"
      ]
     }
    ],
    "source": [
-    "state = [[1],[2],[3]]\n",
-    "for x in range(1,4):\n",
-    "    print(x)\n",
-    "print(validMoves(state))"
+    "state = [[1,2,3],[],[]]\n",
+    "move = [1,2]\n",
+    "print(makeMove([[2], [3], [1]], [1, 2]))"
    ]
   },
   {
@@ -269,7 +353,7 @@
    "cell_type": "code",
    "execution_count": 329,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -353,11 +437,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 496,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m~/Documents/CSU/cs440/A4/A4grader.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstepsToGoal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrainQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidMoves\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmakeMove\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/CSU/cs440/A4/A4grader.py\u001b[0m in \u001b[0;36mtrainQ\u001b[0;34m(nRepetitions, learningRate, epsilonDecayFactor, validMovesF, makeMoveF)\u001b[0m\n\u001b[1;32m     26\u001b[0m                   \u001b[0;31m#Initialize Q at (state, move) to equal 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m                 \u001b[0mQ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstateMoveTuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnext_move\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m                 Q[stateMoveTuple(state,next_move)] = Q.get(stateMoveTuple(state,next_move)) + learningRate *(\n\u001b[0m\u001b[1;32m     29\u001b[0m                                                         \u001b[0;36m1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstateMoveTuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnext_move\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                                                         Q.get(stateMoveTuple(state,next_move)))\n",
+      "\u001b[0;32mnotebookcodeStripped.py\u001b[0m in \u001b[0;36mstateMoveTuple\u001b[0;34m(state, move)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "Q, stepsToGoal = trainQ(50, 0.5, 0.7, validMoves, makeMove)"
    ]
@@ -501,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [
     {
@@ -513,10 +611,6 @@
       "\n",
       "Extracting python code from notebook named 'Armijo-A4.ipynb' and storing in notebookcode.py\n",
       "Removing all statements that are not function or class defs or import statements.\n",
-      "CRITICAL ERROR: Function named 'makeMove' is not defined\n",
-      "  Check the spelling and capitalization of the function name.\n",
-      "CRITICAL ERROR: Function named 'trainQ' is not defined\n",
-      "  Check the spelling and capitalization of the function name.\n",
       "CRITICAL ERROR: Function named 'testQ' is not defined\n",
       "  Check the spelling and capitalization of the function name.\n",
       "\n",
@@ -530,25 +624,24 @@
       "\n",
       "Testing makeMove([[], [], [1, 2, 3]], [3, 2])\n",
       "\n",
-      "--- makeMove raised the exception\n",
-      " name 'makeMove' is not defined\n",
+      "--- 10/10 points. Correctly returned [[], [1], [2, 3]]\n",
       "\n",
       "Testing makeMove([[2], [3], [1]], [1, 2])\n",
       "\n",
-      "--- makeMove raised the exception\n",
-      " name 'makeMove' is not defined\n",
+      "--- 10/10 points. Correctly returned [[], [2, 3], [1]]\n",
       "\n",
       "Testing   Q, steps = trainQ(1000, 0.5, 0.7, validMoves, makeMove).\n",
       "\n",
-      "--- trainQ raised the exception\n",
-      " name 'trainQ' is not defined\n",
+      "--- 10/10 points. Q dictionary has correct number of entries.\n",
+      "\n",
+      "--- 10/10 points. The mean of the number of steps of 1.0 is correctly < 10.\n",
       "\n",
       "Testing   path = testQ(Q, 20, validMoves, makeMove).\n",
       "\n",
       "--- testQ raised the exception\n",
       " name 'testQ' is not defined\n",
       "\n",
-      "A4 Execution Grade is 20 / 80\n",
+      "A4 Execution Grade is 60 / 80\n",
       "\n",
       " Remaining 20 points will be based on your text describing the trainQ and testQ functions.\n",
       "\n",
